<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
    <groupId>org.nhind</groupId>    
    <modelVersion>4.0.0</modelVersion>
    <artifactId>direct-policy</artifactId>    
    <name>Direct Project policy enablement engine</name>
    <version>9.0.0</version>
    <description>Direct Project policy enablement engine</description>
    <inceptionYear>2010</inceptionYear>
    <url>http://api.nhindirect.org/x/www/api.nhindirect.org/java/site/direct-policy/${project.version}</url> 
    <developers>
        <developer>
            <name>Greg Meyer</name>
            <id>GM2552</id>
            <email>gm2552@cerner.com</email>
            <roles>
                <role>owner</role>
            </roles>              
        </developer>                            
     </developers>
     <organization>
        <name>The Direct Project</name>
        <url>http://nhindirect.org</url>
    </organization>
   <prerequisites>
        <maven>3.5.0</maven>
   </prerequisites>   
  <scm>
     <url>scm:git:https://github.com/DirectProjectJavaRI/direct-policy.git</url>  
     <connection>scm:git:https://github.com/DirectProjectJavaRI/direct-policy.git</connection>
  </scm> 
   <parent>
	   <groupId>org.springframework.boot</groupId>
	   <artifactId>spring-boot-dependencies</artifactId>
	   <version>4.1.0</version>
	   <relativePath />
   </parent>
  <licenses>
     <license>
        <name>New BSD License</name>
        <url>http://nhindirect.org/BSDLicense</url>
     </license>
  </licenses>  
   <properties>
      <xstream.version>1.4.21</xstream.version>
      <bcprov-jdk18on.version>1.83</bcprov-jdk18on.version>
      <commons-io.version>2.21.0</commons-io.version>
   </properties>      
  <dependencies>   	  
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>${xstream.version}</version>
		</dependency>	   
		<dependency>
		    <groupId>org.bouncycastle</groupId>
		    <artifactId>bcprov-jdk18on</artifactId>
		    <version>${bcprov-jdk18on.version}</version>    
		</dependency>  		 
	    <dependency>
	    	<groupId>commons-io</groupId>
	    	<artifactId>commons-io</artifactId>
	    	<version>${commons-io.version}</version>
	    </dependency>		 
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>  		                  		
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
		    <scope>test</scope>            
        </dependency>	
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>   		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <scope>test</scope>
		</dependency>					    			   																																																																																												
  </dependencies>      
  <build>
  	<extensions>
		<extension>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-webdav-jackrabbit</artifactId>
		</extension>
		<extension>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-ssh-external</artifactId>
		</extension>
		<extension>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-ssh</artifactId>
		</extension>		
   	</extensions>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <targetPath>lib</targetPath>
        <directory>${project.basedir}/lib</directory>
      </resource>
    </resources>    
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <targetPath>lib</targetPath>
        <directory>${project.basedir}/lib</directory>
      </testResource>
    </testResources>
    <plugins> 
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId> 
      </plugin>
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-jxr-plugin</artifactId>
	</plugin> 	
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<executions>
			<execution>
				<goals>
					<goal>testCompile</goal>
				</goals>
				<phase>compile</phase>
			</execution>
		</executions>
		<configuration>
		    <fork>true</fork>
			<optimize>true</optimize>
			<showDeprecation>true</showDeprecation>
			<encoding>UTF-8</encoding>
			<source>17</source>
			<target>17</target>
		</configuration>
	</plugin> 		     
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>        
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
          <configuration>
             <archive>
                <index>true</index>
             </archive>
          </configuration>       
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
       </plugin> 
     <plugin>
      	<groupId>org.apache.maven.plugins</groupId> 
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
		    <additionalJOption>-Xdoclint:none</additionalJOption>
			<charset>UTF-8</charset>
			<docencoding>UTF-8</docencoding>
			<docfilessubdirs>true</docfilessubdirs>
			<detectJavaApiLink>true</detectJavaApiLink>
			<detectLinks>true</detectLinks>
			<source>17</source>
			<show>public</show> 
            <excludePackageNames>
               org.nhindirect.policy.tools
            </excludePackageNames>    			           	          
	    </configuration>
	    <executions>
              <execution>
	              <phase>package</phase>
	              <id>attach-javadocs</id>
	              <goals>
	                <goal>jar</goal>
	              </goals>
	          </execution>
	    </executions>	  	        
	 </plugin>    
	 <!-- For releases ony
	     <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
            <executions>
               <execution>
                  <id>sign-artifacts</id>
                     <phase>package</phase>
                     <goals>
                        <goal>sign</goal>
                     </goals>
              </execution>
            </executions>
            <version>3.0.1</version>            
        </plugin>	
      -->
        <plugin>
          <groupId>org.sonatype.central</groupId>
          <artifactId>central-publishing-maven-plugin</artifactId>
          <version>0.8.0</version>
          <extensions>true</extensions>
          <configuration>
            <publishingServerId>central</publishingServerId>
          </configuration>
        </plugin>             			    
    </plugins>	    
  </build>                         	
  <reporting>
		<plugins>
	      <plugin>
	           <groupId>org.apache.maven.plugins</groupId>
	           <artifactId>maven-project-info-reports-plugin</artifactId>
	      </plugin>  
	      <plugin>
	      	<groupId>org.apache.maven.plugins</groupId> 
	      	<artifactId>maven-javadoc-plugin</artifactId>
	        <configuration>
                <additionalJOption>-Xdoclint:none</additionalJOption>
				<charset>UTF-8</charset>
				<docencoding>UTF-8</docencoding>
				<docfilessubdirs>true</docfilessubdirs>
				<detectJavaApiLink>true</detectJavaApiLink>
				<detectLinks>true</detectLinks>
				<source>17</source>
				<show>public</show> 
	            <excludePackageNames>
	               org.nhindirect.policy.tools
	            </excludePackageNames>    			           	          
		    </configuration>
	      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
       			<configuration>
          			<targetJdk>17</targetJdk>
        		</configuration>					
			</plugin>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-report-plugin</artifactId>
		    </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
	        <plugin>
	            <groupId>org.codehaus.mojo</groupId> 
	            <artifactId>findbugs-maven-plugin</artifactId>
	            <configuration>
	                <effort>Max</effort>
	                <excludeFilterFile>${project.basedir}/src/report/findbugs-exclude.xml</excludeFilterFile>
	            </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.codehaus.mojo</groupId>
	            <artifactId>taglist-maven-plugin</artifactId>
	            <configuration>
	                <tags>
	                    <tag>FIXME</tag>
	                    <tag>TODO</tag>
	                    <tag>WARN</tag>
	                    <tag>@deprecated</tag>
	                </tags>
	            </configuration>
	        </plugin>	                   
		</plugins>
  </reporting>
</project>
